--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "@angular/platform-browser": "^8.2.10",
     "@angular/platform-browser-dynamic": "^8.2.10",
     "@angular/router": "^8.2.10",
-    "@types/three": "^0.103.2",
     "core-js": "^3.2.1",
     "rxjs": "~6.5.3",
-    "three": "^0.108.0",
+    "three": "^0.109.0",
     "tslib": "^1.10.0",
     "zone.js": "^0.9.1"
   },
@@ -35,6 +34,7 @@
     "@types/jasmine": "~3.4.4",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~12.7.12",
+    "@types/offscreencanvas": "^2019.6.0",
     "codelyzer": "~5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -46,6 +46,6 @@
     "protractor": "~5.4.2",
     "ts-node": "~8.4.1",
     "tslint": "~5.20.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.3"
   }
 }
