--- a/package.json
+++ b/package.json
@@ -12,40 +12,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.10",
-    "@angular/common": "^8.2.10",
-    "@angular/compiler": "^8.2.10",
-    "@angular/core": "^8.2.10",
-    "@angular/forms": "^8.2.10",
-    "@angular/platform-browser": "^8.2.10",
-    "@angular/platform-browser-dynamic": "^8.2.10",
-    "@angular/router": "^8.2.10",
-    "core-js": "^3.2.1",
-    "rxjs": "~6.5.3",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "core-js": "^3.6.4",
+    "rxjs": "^6.5.4",
     "three": "^0.109.0",
     "tslib": "^1.10.0",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.9",
-    "@angular/cli": "^8.3.9",
-    "@angular/compiler-cli": "^8.2.10",
-    "@angular/language-service": "^8.2.10",
-    "@types/jasmine": "~3.4.4",
+    "@angular-devkit/build-angular": "^0.803.23",
+    "@angular/cli": "^8.3.23",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~12.7.12",
-    "@types/offscreencanvas": "^2019.6.0",
+    "@types/offscreencanvas": "^2019.6.1",
     "codelyzer": "~5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "protractor": "~5.4.2",
     "ts-node": "~8.4.1",
-    "tslint": "~5.20.0",
-    "typescript": "^3.5.3"
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.5"
   }
 }
