--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/animations": "^9.0.0-rc.10",
+    "@angular/common": "^9.0.0-rc.10",
+    "@angular/compiler": "^9.0.0-rc.10",
+    "@angular/core": "^9.0.0-rc.10",
+    "@angular/forms": "^9.0.0-rc.10",
+    "@angular/platform-browser": "^9.0.0-rc.10",
+    "@angular/platform-browser-dynamic": "^9.0.0-rc.10",
+    "@angular/router": "^9.0.0-rc.10",
     "core-js": "^3.6.4",
     "rxjs": "^6.5.4",
-    "three": "^0.109.0",
+    "three": "^0.112.1",
     "tslib": "^1.10.0",
-    "zone.js": "^0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.23",
-    "@angular/cli": "^8.3.23",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.900.0-rc.10",
+    "@angular/cli": "^9.0.0-rc.10",
+    "@angular/compiler-cli": "^9.0.0-rc.10",
+    "@angular/language-service": "^9.0.0-rc.10",
     "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~12.7.12",
+    "@types/node": "^12.11.1",
     "@types/offscreencanvas": "^2019.6.1",
-    "codelyzer": "~5.1.2",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
