--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0-rc.10",
-    "@angular/common": "^9.0.0-rc.10",
-    "@angular/compiler": "^9.0.0-rc.10",
-    "@angular/core": "^9.0.0-rc.10",
-    "@angular/forms": "^9.0.0-rc.10",
-    "@angular/platform-browser": "^9.0.0-rc.10",
-    "@angular/platform-browser-dynamic": "^9.0.0-rc.10",
-    "@angular/router": "^9.0.0-rc.10",
+    "@angular/animations": "^9.1.12",
+    "@angular/common": "^9.1.12",
+    "@angular/compiler": "^9.1.12",
+    "@angular/core": "^9.1.12",
+    "@angular/forms": "^9.1.12",
+    "@angular/platform-browser": "^9.1.12",
+    "@angular/platform-browser-dynamic": "^9.1.12",
+    "@angular/router": "^9.1.12",
     "core-js": "^3.6.4",
     "rxjs": "^6.5.4",
     "three": "^0.112.1",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.10",
-    "@angular/cli": "^9.0.0-rc.10",
-    "@angular/compiler-cli": "^9.0.0-rc.10",
-    "@angular/language-service": "^9.0.0-rc.10",
+    "@angular-devkit/build-angular": "~0.901.12",
+    "@angular/cli": "^9.1.12",
+    "@angular/compiler-cli": "^9.1.12",
+    "@angular/language-service": "^9.1.12",
     "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.11.1",
