--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "strict": true,
     "suppressImplicitAnyIndexErrors": true,
     "importHelpers": true,
-    "target": "es5",
+    "target": "ES6",
     "typeRoots": [
       "node_modules/@types"
     ],
