--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "build-prod": "ng build --prod --output-path build --base-href /generic-3Dproduct-viewer/build/",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -34,7 +34,10 @@
     "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "~2.0.8",
     "@types/offscreencanvas": "^2019.6.2",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "codelyzer": "^6.0.0",
+    "eslint": "^7.23.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.2.3",
@@ -44,7 +47,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.4.1",
-    "tslint": "~6.1.3",
     "typescript": "^4.1.3"
   }
 }
