--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "^12.2.11",
     "core-js": "^3.6.4",
     "rxjs": "^6.6.3",
-    "three": "^0.125.2",
+    "three": "^0.133.1",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
@@ -31,17 +31,18 @@
     "@angular/cli": "^12.2.11",
     "@angular/compiler-cli": "^12.2.11",
     "@angular/language-service": "^12.2.11",
-    "@types/jasmine": "^3.4.6",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/offscreencanvas": "^2019.6.2",
-    "codelyzer": "^6.0.0",
+    "@types/jasmine": "^3.10.1",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/offscreencanvas": "^2019.6.4",
+    "@types/three": "^0.133.1",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.5",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.4.1",
     "tslint": "~6.1.3",
