--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.11",
-    "@angular/common": "^12.2.11",
-    "@angular/compiler": "^12.2.11",
-    "@angular/core": "^12.2.11",
-    "@angular/forms": "^12.2.11",
-    "@angular/platform-browser": "^12.2.11",
-    "@angular/platform-browser-dynamic": "^12.2.11",
-    "@angular/router": "^12.2.11",
+    "@angular/animations": "^13.1.0",
+    "@angular/common": "^13.1.0",
+    "@angular/compiler": "^13.1.0",
+    "@angular/core": "^13.1.0",
+    "@angular/forms": "^13.1.0",
+    "@angular/platform-browser": "^13.1.0",
+    "@angular/platform-browser-dynamic": "^13.1.0",
+    "@angular/router": "^13.1.0",
     "core-js": "^3.6.4",
     "rxjs": "^6.6.3",
     "three": "^0.133.1",
@@ -27,25 +27,25 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.11",
-    "@angular/cli": "^12.2.11",
-    "@angular/compiler-cli": "^12.2.11",
-    "@angular/language-service": "^12.2.11",
-    "@types/jasmine": "^3.10.1",
+    "@angular-devkit/build-angular": "~13.1.1",
+    "@angular/cli": "^13.1.1",
+    "@angular/compiler-cli": "^13.1.0",
+    "@angular/language-service": "^13.1.0",
+    "@types/jasmine": "^3.10.2",
     "@types/jasminewd2": "^2.0.10",
     "@types/offscreencanvas": "^2019.6.4",
     "@types/three": "^0.133.1",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "^3.10.1",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.5",
+    "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.4.1",
     "tslint": "~6.1.3",
-    "typescript": "4.3.5"
+    "typescript": "4.5.4"
   }
 }
