--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "strict": true,
     "suppressImplicitAnyIndexErrors": true,
     "importHelpers": true,
-    "target": "ES6",
+    "target": "es2020",
     "typeRoots": [
       "node_modules/@types"
     ],
