33: Added tree structure with work in progress nodes and refactored css a bit to use more variables.

--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,11 @@
             "styles": [
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles/variables"
+              ]
+            },
             "scripts": [],
             "vendorChunk": true,
             "extractLicenses": false,
