33: Added responsiveness and focus support.

--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
-                "src/styles/variables"
+                "src/styles/variables",
+                "src/styles/mixins"
               ]
             },
             "scripts": [],
