--- a/angular.json
+++ b/angular.json
@@ -100,6 +100,12 @@
             "styles": [
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles/variables",
+                "src/styles/mixins"
+              ]
+            },
             "scripts": [],
             "assets": [
               "src/favicon.ico",
