--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,14 @@
     "strict": true,
     "suppressImplicitAnyIndexErrors": true,
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
       "es2019",
       "dom"
-    ]
+    ],
+    "useDefineForClassFields": false
   }
 }
